pengumpulan tugas modul pertemuan 10

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 *.class
 /Pertemuan-07/Tugas/latihanMedium/nbproject/private/
 /Pertemuan-07/Tugas/latihanMedium/build/
+/Pertemuan-10/Modul/gui/nbproject/private/
+/Pertemuan-10/Modul/GuiProject/nbproject/private/
+/Pertemuan-10/Modul/GuiProject/build/
+/Pertemuan-10/Modul/GuiProject/dist/
+/Pertemuan-10/Modul/Proyek2/nbproject/private/
+/Pertemuan-10/Modul/Proyek2/build/
+/Pertemuan-10/Modul/Proyek3/nbproject/private/
+/Pertemuan-10/Modul/Proyek3/build/
+/Pertemuan-10/Modul/Proyek4/nbproject/private/
