pengumpulan proyek 4 modul pertemuan 10

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Pertemuan-10/Modul/Proyek3/nbproject/private/
 /Pertemuan-10/Modul/Proyek3/build/
 /Pertemuan-10/Modul/Proyek4/nbproject/private/
+/Pertemuan-10/Modul/Proyek4/build/
