--- a/Pertemuan-10/Modul/Proyek4/nbproject/project.properties
+++ b/Pertemuan-10/Modul/Proyek4/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyek4
-main.class=
+main.class=guiproject.Proyek4
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
