--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 /Pertemuan-10/Modul/Proyek3/build/
 /Pertemuan-10/Modul/Proyek4/nbproject/private/
 /Pertemuan-10/Modul/Proyek4/build/
+/Pertemuan-12/Modul/jdbc_mhs_service/nbproject/private/
+/Pertemuan-12/Modul/jdbc_mhs_service/build/
+/Pertemuan-12/Modul/jdbc_mhs_service_GUI/nbproject/private/
+/Pertemuan-12/Modul/jdbc_mhs_service_GUI/build/
